--- a/package.json
+++ b/package.json
@@ -3,6 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@tiptap/extension-blockquote": "^2.5.8",
+    "@tiptap/extension-bold": "^2.5.8",
+    "@tiptap/extension-bullet-list": "^2.5.8",
+    "@tiptap/extension-code": "^2.5.8",
+    "@tiptap/extension-document": "^2.5.8",
+    "@tiptap/extension-hard-break": "^2.5.8",
+    "@tiptap/extension-heading": "^2.5.8",
+    "@tiptap/extension-highlight": "^2.5.8",
+    "@tiptap/extension-history": "^2.5.8",
+    "@tiptap/extension-horizontal-rule": "^2.5.8",
+    "@tiptap/extension-italic": "^2.5.8",
+    "@tiptap/extension-link": "^2.5.8",
+    "@tiptap/extension-list-item": "^2.5.8",
+    "@tiptap/extension-list-keymap": "^2.5.8",
+    "@tiptap/extension-ordered-list": "^2.5.8",
+    "@tiptap/extension-paragraph": "^2.5.8",
+    "@tiptap/extension-placeholder": "^2.5.8",
+    "@tiptap/extension-strike": "^2.5.8",
+    "@tiptap/extension-task-item": "^2.5.8",
+    "@tiptap/extension-task-list": "^2.5.8",
+    "@tiptap/extension-text": "^2.5.8",
+    "@tiptap/extension-underline": "^2.5.8",
+    "@tiptap/react": "^2.5.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -14,5 +37,17 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
