--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@tiptap/extension-bold": "^2.5.8",
     "@tiptap/extension-bullet-list": "^2.5.8",
     "@tiptap/extension-code": "^2.5.8",
+    "@tiptap/extension-code-block": "^2.5.8",
     "@tiptap/extension-document": "^2.5.8",
     "@tiptap/extension-hard-break": "^2.5.8",
     "@tiptap/extension-heading": "^2.5.8",
