added more icon integeration

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@tiptap/extension-bullet-list": "^2.5.8",
     "@tiptap/extension-code": "^2.5.8",
     "@tiptap/extension-code-block": "^2.5.8",
+    "@tiptap/extension-color": "^2.5.8",
     "@tiptap/extension-document": "^2.5.8",
     "@tiptap/extension-hard-break": "^2.5.8",
     "@tiptap/extension-heading": "^2.5.8",
@@ -22,9 +23,12 @@
     "@tiptap/extension-paragraph": "^2.5.8",
     "@tiptap/extension-placeholder": "^2.5.8",
     "@tiptap/extension-strike": "^2.5.8",
+    "@tiptap/extension-subscript": "^2.5.8",
+    "@tiptap/extension-superscript": "^2.5.8",
     "@tiptap/extension-task-item": "^2.5.8",
     "@tiptap/extension-task-list": "^2.5.8",
     "@tiptap/extension-text": "^2.5.8",
+    "@tiptap/extension-text-style": "^2.5.8",
     "@tiptap/extension-underline": "^2.5.8",
     "@tiptap/react": "^2.5.8",
     "react": "^17.0.2",
